[tool.poetry]
name = "bscp-labs-randomizer"
version = "0.1.0"
description = ""
authors = ["Tijmen Desktop <tjakobsen@live.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
mitmproxy = "^10.2.1"
argparse = "^1.4.0"
logging = "^0.4.9.6"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
