[tool.poetry]
name = "bscp-labs-randomizer"
version = "1.0.0"
description = "Only randomize labs that are applicable for the BSCP exam. For example, this does not include the labs where you need to get the leather jacket. Do keep in mind that I strongly recommend to do these 'skipped' labs regardless."
authors = ["TJakobsen <tjakobsen@the-s-unit.nl>"]
readme = "README.md"
packages = [{include = "bscp_labs_randomizer"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
logging = "^0.4.9.6"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
